# Library_Management_System

./: CMakeLists.txt  LICENSE  README.md  dark.qss  main.cpp  resources.qrc  stylesheet.qss
auth/: AuthManager.cpp  AuthManager.h
database/: DatabaseManager.cpp  DatabaseManager.h  library_system.db
documentation/: Developer Guide_Library Managem.md  README.md
models/: Book.cpp  Book.h  Learner.cpp  Learner.h  Main.cpp  PaymentItem.cpp  PaymentItem.h  Payments.cpp  Payments.h  Transaction.cpp  Transaction.h  User.cpp  User.h
themes/: dark.qss
ui/: MainWindow.cpp  MainWindow.h  MainWindow.ui  Numbers_Quiz.html
utils/: Encryption.cpp  Encryption.h
